Change sets in immutable classes (Realm, Kingdom, KingdomLaw) to ImmutableSet